--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18",
     "react-card-flip": "^1.2.2",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-spring": "^9.7.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
