--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "next": "14.0.3",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-card-flip": "^1.2.2",
     "react-dom": "^18",
