--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-card-flip": "^1.2.2",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "react-spring": "^9.7.3"
+    "react-spring": "^9.7.3",
+    "styled-jsx": "^5.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
