--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.5"
   }
 }
