--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "framer-motion": "^10.16.16",
     "next": "14.0.3",
     "nodemailer": "^6.9.7",
     "react": "^18",
