--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/mail": "^7.7.0",
     "framer-motion": "^10.16.16",
     "next": "14.0.3",
+    "next-seo": "^6.4.0",
     "nodemailer": "^6.9.7",
     "react": "^18",
     "react-card-flip": "^1.2.2",
